--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-
-
-.vscode/settings.json
+.vs/
+.vscode/
 test.toml
 t.toml
 _t.py
 _test.py
-.vscode/launch.json
-.vscode/.ropeproject/objectdb
-.vscode/.ropeproject/config.py
 src/twint/
 Twisted-20.3.0-cp39-cp39-win_amd64.whl
