--- a/data/config.toml
+++ b/data/config.toml
@@ -1,8 +1,9 @@
 [tradoge]
 tweet_frequency = "10"
 trading_pair = "USDT"
-quantity = "1000"
+quantity = "50"
 sell_delay = "5"
+buying_mode = "USD"
 
 [binance]
 api_key = ""
