hotfix after binance API changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ elasticsearch ~= 7.11.0
 fake_useragent ~= 0.1.11
 pandas ~= 1.2.2
 progress ~= 1.5
-python_binance ~= 0.7.9
+python_binance >= 1.0.15
 requests ~= 2.25.1
 schedule ~= 1.0.0
 setuptools ~= 47.1.0
