--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,10 @@
 PyInquirer ~= 1.0.3
-aiohttp ~= 3.7.3
-aiohttp_socks ~= 0.5.5
 art ~= 5.1
-async_timeout ~= 3.0.1
-beautifulsoup4 ~= 4.9.3
 cryptography ~= 3.4.4
-cursor ~= 1.3.4
-elasticsearch ~= 7.11.0
-fake_useragent ~= 0.1.11
-pandas ~= 1.2.2
 progress ~= 1.5
-python_binance ~= 1.0.15
-requests ~= 2.25.1
-schedule ~= 1.0.0
-setuptools ~= 47.1.0
-spinners ~= 0.0.24
+requests ~=2.27.1
 timg ~= 1.1.5
 toml ~= 0.10.2
-twint @ git+https://github.com/twintproject/twint.git@origin/master#egg=twint
-numpy~=1.20.1
-Pillow~=8.1.2
 colorama~=0.4.4
+DateTime~=4.3
+python-twitter-v2~=0.7.3
