--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-PyInquirer ~= 1.0.3
-art ~= 5.1
-cryptography ~= 3.4.4
-progress ~= 1.5
-requests ~=2.27.1
-timg ~= 1.1.5
-toml ~= 0.10.2
+PyInquirer~=1.0.3
+art~=5.1
+cryptography~=36.0.1
+progress~=1.5
+requests~=2.27.1
+timg~=1.1.5
+toml~=0.10.2
 colorama~=0.4.4
-DateTime~=4.3
-python-twitter-v2~=0.7.3
+DateTime~=4.4
+python-twitter-v2~=0.7.4
+python_binance~=1.0.15
