--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 PyInquirer~=1.0.3
 art~=5.1
-cryptography~=36.0.1
+cryptography==38.0.4
 progress~=1.5
-requests~=2.27.1
+requests==2.28.1
 timg~=1.1.5
 toml~=0.10.2
 colorama~=0.4.4
 DateTime~=4.4
-python-twitter-v2~=0.7.4
+python-twitter-v2==0.8.0
 python_binance~=1.0.15
