refactor: move config files to separate config directory

--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -15,7 +15,7 @@ exchangeAccount:
     secret: your_secret_key
 tradingPairs:
   - baseCurrency: DOGE
-    quoteCurrency: USDT
+    quoteCurrency: USDC
     exchangeAccountName: binance
     searchKeywords:
       - doge
