--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: gschurck/tradoge:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
