feat: set image version in docker compose to v2.0.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   tradoge:
-    image: gschurck/tradoge:latest
+    image: gschurck/tradoge:2.0.0
     user: "${UID:-1000}:${GID:-1000}"
     volumes:
       - ./config:/app/config:ro
